[package]
name = "valhalla-gatling"
version = "0.1.0"
edition = "2021"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flume = "0.11.1"
pcap-parser = "0.16"
protobuf = "3.5.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
protobuf-codegen = "3.5.1"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1"
