[package]
name = "valhalla-gatling"
description = "Load testing tool for Valhalla routing engine"
version = "0.1.0"
edition = "2024"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flexbuffers = "25"
flume = "0.11"
mimalloc = "0.1"
pcap-parser = "0.16"
protobuf = "3.5.1"
rand = "0.9"
reqwest = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
protobuf-codegen = "3.5.1"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1"
